// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders appropriately with Show Private button (not syncing) 1`] = `
<div
  className="repo-tools"
>
  <RepoToolsSearch
    onSearchInput={[Function]}
  />
  <RepoToolsPrivate />
  <RepoToolsRefresh
    isSyncing={false}
    onRefreshClicked={[Function]}
  />
</div>
`;

exports[`renders appropriately without Show Private button (not syncing) 1`] = `
<div
  className="repo-tools"
>
  <RepoToolsSearch
    onSearchInput={[Function]}
  />
  <RepoToolsRefresh
    isSyncing={false}
    onRefreshClicked={[Function]}
  />
</div>
`;
